--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,4 +74,7 @@ dependencies {
     // Compose
     implementation 'androidx.activity:activity-compose:1.5.1'
     implementation 'androidx.compose.material:material:1.2.1'
+    implementation 'io.coil-kt:coil-compose:2.2.2'
+
+    implementation 'androidx.compose.runtime:runtime-livedata:1.2.0-beta02'
 }
